--- a/src/main/resources/templates/persons/overview.html
+++ b/src/main/resources/templates/persons/overview.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width,initial-scale=1" name="viewport"/>
-    <meta th:name="_csrf" th:content="${_csrf.token}" />
-    <title>Personen | Adebar</title>
-    <script type="text/javascript" src="../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" src="../static/resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width,initial-scale=1" name="viewport"/>
+  <meta th:name="_csrf" th:content="${_csrf.token}"/>
+  <title>Personen | Adebar</title>
+  <script type="text/javascript" src="../static/resources/js/jquery.min.js"
+          th:src="@{/webjars/jquery/jquery.min.js}"></script>
+  <script type="text/javascript" src="../static/resources/js/bootstrap.min.js"
+          th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+  <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css"
+        th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css" th:href="@{/resources/css/style.css}"/>
+  <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css"
+        th:href="@{/resources/css/style.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css" th:href="@{/resources/css/animation.css}"/>
+  <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css"
+        th:href="@{/resources/css/animation.css}"/>
 
-    <script type="text/javascript" src="../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"></script>
-    <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
+  <script type="text/javascript" src="../static/resources/js/list.min.js"
+          th:src="@{/resources/js/list.min.js}"></script>
+  <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js"
+          th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-select.min.css" th:href="@{/resources/css/bootstrap-select.min.css}" />
-    <script type="text/javascript" src="../static/resources/js/bootstrap-select.min.js" th:src="@{/resources/js/bootstrap-select.min.js}"></script>
+  <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-select.min.css"
+        th:href="@{/resources/css/bootstrap-select.min.css}"/>
+  <script type="text/javascript" src="../static/resources/js/bootstrap-select.min.js"
+          th:src="@{/resources/js/bootstrap-select.min.js}"></script>
 
-    <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-datetimepicker.min.css" th:href="@{/resources/css/bootstrap-datetimepicker.min.css}" />
-    <script type="text/javascript" src="../static/resources/js/moment-with-locales.min.js" th:src="@{/resources/js/moment-with-locales.min.js}"></script>
-    <script type="text/javascript" src="../static/resources/js/bootstrap-datetimepicker.min.js" th:src="@{/resources/js/bootstrap-datetimepicker.min.js}"></script>
+  <link rel="stylesheet" type="text/css"
+        href="../static/resources/css/bootstrap-datetimepicker.min.css"
+        th:href="@{/resources/css/bootstrap-datetimepicker.min.css}"/>
+  <script type="text/javascript" src="../static/resources/js/moment-with-locales.min.js"
+          th:src="@{/resources/js/moment-with-locales.min.js}"></script>
+  <script type="text/javascript" src="../static/resources/js/bootstrap-datetimepicker.min.js"
+          th:src="@{/resources/js/bootstrap-datetimepicker.min.js}"></script>
 
 </head>
 <body>
@@ -37,16 +51,17 @@
 
     <div class="row margin-top-lg margin-btm-lg">
       <div class="col-md-4">
-          <h1>Personen-Übersicht</h1>
+        <h1>Personen-Übersicht</h1>
       </div>
-      
+
       <!-- menu -->
       <div class="action-bar col-md-8">
         <div class="row">
           <form id="person-search" class="col-md-9" method="get" th:action="@{/persons/search}">
             <label for="person-search" class="sr-only">Suchen (Name, Stadt, Email o.ä.)</label>
             <div class="input-group">
-              <input type="search" name="query" class="form-control" id="person-search" placeholder="Name, Stadt, E-Mail, ..." />
+              <input type="search" name="query" class="form-control" id="search"
+                     placeholder="Name, Stadt, E-Mail, ..."/>
               <div class="input-group-addon">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
               </div>
@@ -68,7 +83,7 @@
         </div>
       </div>
     </div>
-  
+
   </header>
 
   <div class="row display-category">
@@ -76,28 +91,40 @@
       <table class="table table-striped table-hover">
         <thead></thead>
         <tbody th:remove="all-but-first">
-          <tr class="row" th:each="person : ${persons}">
-            <td class="col-md-1">
-              <span class="glyphicon glyphicon-tent" data-toggle="tooltip" data-placement="bottom" data-title="Campteilnehmer*in" th:if="${person.participant}"></span>
-              <span class="glyphicon glyphicon-wrench" data-toggle="tooltip" data-placement="bottom" data-title="Aktive*r" th:if="${person.activist}"></span>
-              <span class="glyphicon glyphicon-blackboard" data-toggle="tooltip" data-placement="bottom" data-title="Referent*in" th:if="${person.referent}"></span>
-              <span class="glyphicon glyphicon-briefcase" data-toggle="tooltip" data-placement="bottom" data-title="Geschäftskontakt" th:if="false"></span>
-              <span class="glyphicon glyphicon-baby-formula" data-toggle="tooltip" data-placement="bottom" data-title="Elternteil" th:if="false"></span>
-            </td>
-            <td class="col-md-3" th:text="${person.name}">Frieda Frisch</td>
-            <td class="col-md-5">
-              <a href="mailto:frieda_frisch@web.de" th:href="${person.email} ? |mailto:${person.email}|" th:text="${person.email} ?: '---'">frieda_frisch@web.de</a>
-            </td>
-            <td class="col-md-2" th:text="${person.address != null and not person.address.city.empty} ? ${person.address.city} : '---'">
-              Entenhausen
-            </td>
-            <td class="col-md-1">
-              <a href="personDetails.html" th:href="@{/persons/{id}(id=${person.id})}">
-                <span class="glyphicon glyphicon-new-window"></span>
-                <span class="sr-only">Details</span>
-              </a>
-            </td>
-          </tr>
+        <tr class="row" th:each="person : ${persons}">
+          <td class="col-md-1">
+            <span class="glyphicon glyphicon-tent" data-toggle="tooltip" data-placement="bottom"
+                  data-title="Campteilnehmer*in" data-container="body"
+                  th:if="${person.participant}"></span>
+            <span class="glyphicon glyphicon-wrench" data-toggle="tooltip" data-placement="bottom"
+                  data-title="Aktive*r" data-container="body" th:if="${person.activist}"></span>
+            <span class="glyphicon glyphicon-blackboard" data-toggle="tooltip"
+                  data-placement="bottom" data-title="Referent*in" data-container="body"
+                  th:if="${person.referent}"></span>
+            <span class="glyphicon glyphicon-briefcase" data-toggle="tooltip"
+                  data-placement="bottom" data-title="Geschäftskontakt" data-container="body"
+                  th:if="false"></span>
+            <span class="glyphicon glyphicon-baby-formula" data-toggle="tooltip"
+                  data-placement="bottom" data-title="Elternteil" data-container="body"
+                  th:if="false"></span>
+          </td>
+          <td class="col-md-3" th:text="${person.name}">Frieda Frisch</td>
+          <td class="col-md-5">
+            <a href="mailto:frieda_frisch@web.de"
+               th:href="${person.email} ? |mailto:${person.email}|"
+               th:text="${person.email} ?: '---'">frieda_frisch@web.de</a>
+          </td>
+          <td class="col-md-2"
+              th:text="${person.address != null and not person.address.city.empty} ? ${person.address.city} : '---'">
+            Entenhausen
+          </td>
+          <td class="col-md-1">
+            <a href="personDetails.html" th:href="@{/persons/{id}(id=${person.id})}">
+              <span class="glyphicon glyphicon-new-window"></span>
+              <span class="sr-only">Details</span>
+            </a>
+          </td>
+        </tr>
         </tbody>
       </table>
     </div>
