Add infrastructure to use the 'add person' form as an intermediate dialog
This adds inputs which capture an action as well as redirection to use after a person has been successfully added. Instead of redirecting to the person's detail page as the controller would normally do, it will now check if a redirection parameter exists and if that is the case use this one instead. The action will be provided as a GET parameter to be analyzed by the resulting template.

--- a/src/main/resources/templates/persons/addPerson.html
+++ b/src/main/resources/templates/persons/addPerson.html
@@ -157,6 +157,11 @@
   <!-- the form -->
   <form id="add-person" class="row display-category" method="post" th:action="@{/persons/add}">
 
+    <input type="hidden" name="return-to" th:value="${#request.getParameter('return-to')}"
+           th:if="${#request.getParameter('return-to') != null}"/>
+    <input type="hidden" name="return-action" th:value="${#request.getParameter('return-action')}"
+           th:if="${#request.getParameter('return-action') != null}"/>
+
     <!-- general info -->
     <div class="col-md-4">
       <div class="panel panel-primary">
