Polish templates of person module

--- a/src/main/resources/templates/persons/activistProfile.html
+++ b/src/main/resources/templates/persons/activistProfile.html
@@ -48,9 +48,8 @@
   </ul>
 
   <article class="tab-content">
-
-    <!-- general and relationship -->
-    <div id="overview" class="tab-pane active container-fluid" role="tabpanel">
+    
+    <div id="activist-profile" class="tab-pane active container-fluid" role="tabpanel">
 
       <!-- activist profile -->
       <section id="activist" class="display-category" th:fragment="profile">
