--- a/src/main/resources/templates/persons/referentProfile.html
+++ b/src/main/resources/templates/persons/referentProfile.html
@@ -124,7 +124,7 @@
           </form>
         </div>
 
-        <div class="modal fade in modal-tabbed" id="add-qualification-dialog" tabindex="-1"
+        <div class="modal fade modal-tabbed" id="add-qualification-dialog" tabindex="-1"
              role="dialog" th:if="${referent}">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
