--- a/src/main/resources/templates/persons/overview.html
+++ b/src/main/resources/templates/persons/overview.html
@@ -7,37 +7,12 @@
   <meta content="width=device-width,initial-scale=1" name="viewport"/>
   <meta th:name="_csrf" th:content="${_csrf.token}"/>
   <title>Personen | Adebar</title>
-  <script type="text/javascript" src="../static/resources/js/jquery.min.js"
-          th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript" src="../static/resources/js/bootstrap.min.js"
-          th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-  <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap.min.css"
+
+
+  <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap.min.css"
         th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-
-  <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css"
+  <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css"
         th:href="@{/resources/css/style.css}"/>
-
-  <link rel="stylesheet" type="text/css" href="../static/resources/css/animation.css"
-        th:href="@{/resources/css/animation.css}"/>
-
-  <script type="text/javascript" src="../static/resources/js/list.min.js"
-          th:src="@{/resources/js/list.min.js}"></script>
-  <script type="text/javascript" src="../static/resources/js/list.fuzzysearch.min.js"
-          th:src="@{/resources/js/list.fuzzysearch.min.js}"></script>
-
-  <link rel="stylesheet" type="text/css" href="../static/resources/css/bootstrap-select.min.css"
-        th:href="@{/resources/css/bootstrap-select.min.css}"/>
-  <script type="text/javascript" src="../static/resources/js/bootstrap-select.min.js"
-          th:src="@{/resources/js/bootstrap-select.min.js}"></script>
-
-  <link rel="stylesheet" type="text/css"
-        href="../static/resources/css/bootstrap-datetimepicker.min.css"
-        th:href="@{/resources/css/bootstrap-datetimepicker.min.css}"/>
-  <script type="text/javascript" src="../static/resources/js/moment-with-locales.min.js"
-          th:src="@{/resources/js/moment-with-locales.min.js}"></script>
-  <script type="text/javascript" src="../static/resources/js/bootstrap-datetimepicker.min.js"
-          th:src="@{/resources/js/bootstrap-datetimepicker.min.js}"></script>
-
 </head>
 <body>
 
@@ -61,7 +36,7 @@
             <label for="person-search" class="sr-only">Suchen (Name, Stadt, Email o.ä.)</label>
             <div class="input-group">
               <input type="search" name="query" class="form-control" id="search"
-                     placeholder="Name, Stadt, E-Mail, ..."/>
+                     placeholder="Name, Stadt, E-Mail, ..." th:value="${param.query}"/>
               <div class="input-group-addon">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
               </div>
@@ -74,9 +49,12 @@
                 <span class="glyphicon glyphicon-plus"></span>
                 Hinzufügen
               </a>
-              <a href="filterPersons.html" class="btn btn-default" th:href="@{/persons/filter}">
+              <a href="filterPersons.html" class="btn btn-default" disabled="disabled"
+                 data-toggle="tooltip" data-placement="bottom"
+                 data-title="Funktioniert bald wieder.. Versprochen!"
+                 th:href="@{/persons/filter}">
                 <span class="glyphicon glyphicon-filter"></span>
-                Filtern
+                <span class="hide-sm">Filtern</span>
               </a>
             </div>
           </div>
@@ -87,7 +65,8 @@
   </header>
 
   <div class="row display-category">
-    <div class="table-responsive col-md-10 col-md-offset-1">
+
+    <div class="table-responsive col-md-10 col-md-offset-1" th:if="${persons.hasContent()}">
       <table class="table table-striped table-hover">
         <thead></thead>
         <tbody th:remove="all-but-first">
@@ -128,6 +107,13 @@
         </tbody>
       </table>
     </div>
+
+    <div class="col-md-10 col-md-offset-1 margin-top-lg" th:unless="${persons.hasContent()}">
+      <div class="alert alert-info text-center">
+        Keine Personen gefunden
+      </div>
+    </div>
+
   </div>
 
   <div class="row display-category" th:if="${persons.hasNext()} or ${persons.hasPrevious()}">
@@ -160,7 +146,10 @@
   </div>
 
 </main>
-<script src="../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
-<script src="../static/resources/js/persons.js" th:src="@{/resources/js/persons.js}"></script>
+<script type="text/javascript" src="../../static/resources/js/jquery.min.js"
+        th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" src="../../static/resources/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
 </body>
 </html>
