#30 - Actually check whether the person participated in events in timeline

--- a/src/main/resources/templates/persons/events.html
+++ b/src/main/resources/templates/persons/events.html
@@ -208,7 +208,8 @@
               </div>
               <div class="col-md-7 col-md-pull-5">
 
-                <div class="row" th:if="${participationTimeline}">
+                <div class="row"
+                     th:if="${participationTimeline != null and not participationTimeline.isEmpty()}">
                   <p class="">
                     <em th:text="${person.name}">Jane Doe</em> hat an folgenden Veranstaltungen
                     teilgenommen:
@@ -216,7 +217,8 @@
                 </div>
 
                 <!-- timeline -->
-                <div class="row" th:if="${participationTimeline}">
+                <div class="row"
+                     th:if="${participationTimeline != null and not participationTimeline.isEmpty()}">
                   <div id="event-participation-timeline" class="timeline" th:remove="all-but-first">
                     <div class="timeline-year" th:each="entry : ${participationTimeline}">
                       <div class="timeline-group-wrapper">
@@ -264,7 +266,8 @@
                   </div>
                 </div>
 
-                <div class="row margin-top-lg" th:unless="${participationTimeline}">
+                <div class="row margin-top-lg"
+                     th:unless="${participationTimeline != null and not participationTimeline.isEmpty()}">
                   Bisher hat die Person noch an keinen Veranstaltungen teilgenommen.
                 </div>
 
