--- a/src/main/resources/templates/persons/personDetails.html
+++ b/src/main/resources/templates/persons/personDetails.html
@@ -125,17 +125,17 @@
 
     <section id="events" class="display-category tab-pane" role="tabpanel"
              th:if="${tab == 'events'}" th:classappend="${tab == 'events'} ? 'active'">
-      
+
       <div th:replace="persons/events :: timeline"></div>
-      
+
     </section>
 
     <section id="newsletters" class="display-category tab-pane" role="tabpanel"
              th:if="${tab == 'newsletters'}"
              th:classappend="${tab == 'newsletters'} ? 'active'">
-      
+
       <div th:replace="persons/subscribedNewsletters :: newsletters"></div>
-      
+
 
     </section>
 
@@ -164,6 +164,10 @@
         th:src="@{/resources/js/formControls.js}"></script>
 <script src="../../static/resources/js/personDetails.js"
         th:src="@{/resources/js/personDetails.js}"></script>
+
+<script th:if="${param.form != null and param.form[0] == 'edit-person'}">
+  $(document).ready(() => $('#edit-person-dialog').modal('show'));
+</script>
 
 <script th:if="${param.do != null and param.do[0] == 'add-parent'}" th:inline="javascript">
   $(document).ready(() => {
