--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -11,7 +11,7 @@ body {
 main {
   width: 80%;
   min-height: 90%;
-  margin: 0 auto 15px auto;
+  margin: 70px auto 15px auto;
   padding-bottom: 2em;
   background-color: #fff;
   padding: 15px;
